--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TikTok Ban Countdown</title>
+    <script>
+		setInterval(function() { // stolen from 7grandad
+			const timeSince = Date.now() - Date.UTC(2025, 1, 19, 23, 59, 59, 0)
+			const sec = Math.floor(timeSince / 1e3);
 
+			document.getElementById("days").innerText = Math.floor(
+				sec / 60 / 60 / 24
+			);
+			document.getElementById("hours").innerText = Math.floor(
+				(sec / 60 / 60) % 24
+			);
+			document.getElementById("minutes").innerText = Math.floor(
+				(sec / 60) % 60
+			);
+			document.getElementById("seconds").innerText = sec % 60;
+		}, 1e2);
+	</script>
+</head>
+<body>
+    TikTik will be banned in
+    <br />
+    <span id="days">0</span> days, <span id="hours">0</span> hours,
+    <span id="minutes">0</span> minutes, and
+    <span id="seconds">0</span> seconds
+</body>
+</html>
